--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@apollo/client": "^3.10.8",
     "@reduxjs/toolkit": "^2.2.6",
     "date-fns": "^3.6.0",
+    "framer-motion": "^11.3.24",
     "graphql": "^16.9.0",
     "js-cookie": "^3.0.5",
     "next": "14.2.4",
